flux/open-webui/open-webui.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  labels:
    # https://www.talos.dev/v1.7/kubernetes-guides/configuration/pod-security/
    # Sinon les pods metallb-speaker ne se lancent pas
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
